# windows-mkpasswd

./: CMakeLists.txt  LICENSE  README.md
cmake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
lib/: CMakeLists.txt
lib/include/windows-mkpasswd/: windows-mkpasswd.hpp
lib/source/: windows-mkpasswd.cpp
test/: CMakeLists.txt
test/data/: generate-test-data.bash  test-data.txt
test/source/: main.cpp  windows-mkpasswd.cpp
